@@ -1,8 +1,8 @@
 Package: crs
-Version: 0.15-23
-Date: 2014-08-11
-Imports: boot, stats
-Suggests: np, npRmpi, rgl, quadprog, quantreg, logspline
+Version: 0.15-24
+Date: 2014-12-18
+Imports: boot, stats, np, quantreg, rgl
+Suggests: logspline, npRmpi, quadprog
 Title: Categorical Regression Splines
 Authors@R: c(person(given = "Jeffrey S.", family = "Racine", role = c("aut","cre"), email = "racinej@mcmaster.ca"),
              person(given = "Zhenghua", family = "Nie", role = c("aut"), email = "niez@mcmaster.ca"),
