@@ -1,3 +1,9 @@
+Changes from Version 0.15-23 to 0.15-24 [18-Dec-2014]
+
+* Move option init from .onAttach to .onLoad in zzz.R (Bernd Bischl)
+
+* Reworded DESCRIPTION (request from Kurt Hornik)
+
 Changes from Version 0.15-22 to 0.15-23 [11-Aug-2014]
 
 * Fixed bugs on setting seed in snomadr so that successive calls with
